<resources>
    <string name="app_name">ElCaldo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_buscar">Busqueda</string>
    <string name="drawer_open">Open</string>
    <string name="home">Recetario Típico</string>
    <string name="drawer_close">Close</string>
    <string name="speech_prompt">Menciona Un plato de comida típica</string>
    <string name="speech_not_supported">Lo sentimos, tu dispositivo no es compatible voz a texto de Google</string>
    <string name="tap_on_mic">Presiona en el microfono para hablar</string>
    <string name="pagina_principal">Recetario Típico</string>
    <string name="salir">Salir</string>
    <string name="preferencias">Preferencias</string>
    <string name="title_activity_fourth">NombreComida</string>
    <string name="creditos">Créditos</string>
    <string name="compartir">Redes Sociales</string>
    <string name="title_activity_acerca_de">AcercaDe</string>
    <string name="acercade">Desarollador de aplicación: Fernando Lazaro</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_creditos">Créditos</string>
    <string name="caldoapp">ElCaldo</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_terminos_condiciones">TerminosCondiciones</string>
    <string name="title_activity_comparte">Comparte</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_otras_comidas">OtrasComidas</string>
    <string name="hint_plato_comida">Escriba una comida típica...</string>
    <string name="email">BIENVENIDO</string>
    <string name="calender">NAVEGACIÓN</string>
    <string name="shopping">PLATOS TÍPICOS</string>
    <string name="social_network">REDES SOCIALES</string>
    <string name="email_hint">ElCaldo es más que una herramienta es una extensión para cualquier persona que quiera preparar una plato típico.</string>
    <string name="calender_hint">La interfaz de usuario intuitiva, divertida y colorida. Desliza el menú de navegación de izquierda
    a derecha para poder interactuar con las demas funcionalidades.</string>
    <string name="shopping_hint">Guatemala cuenta con una gastronomía amplia de diversos sabores y colores, que esperas?
        así que busca el plato que te apetezca. Realiza una busqueda por medio de texto o comando de voz el plato que deseas.</string>
    <string name="social_network_hint">Comparte tus platos típicos favoritos con tus amigos, compañeros y familia en tus redes sociales. </string>
    <string name="skip">SKIP</string>
    <string name="pref_previously_started">Saber juatafuk</string>
    <string name="finalizar">Finalizar</string>
    <string name="title_activity_como_usar">ComoUsarActivity</string>
    <string name="otras_comidas">Otras Comidas</string>
    <string name="favoritos">Favoritos</string>
    <string name="prefs">Audio Preferencias</string>
    <string name="como_usar">Como usar</string>
    <string name="web_site">Web site</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="terminos_condiciones">Terminos y condiciones</string>
    <string name="creditos_drawer">Créditos</string>
    <string name="camara_activity">Comparte tu preparación</string>
    <string name="buscar_activity">Buscar una receta</string>
    <string name="detalle_activity">Detalle de receta</string>
    <string name="desactivar">Desactivar</string>
    <string name="audio_splash">Audio en la pantalla de bienvenida</string>
    <string name="toast_buscar">Realize una busqueda del plato típico que desee, por medio de escritura o comando de voz</string>
    <string name="toast_camara">Debes tomar una foto para poder compartirla</string>
    <string name="toast_shot">Toma una foto de plato típico!</string>
    <string name="comparte_camara">Así quedo mi plato típico Amigos! :D</string>
    <string name="comparte_imagen">Compartir imagen del plato</string>
    <string name="comparte_plato">Compartir del plato típico</string>
    <string name="via">- Vía aplicación ElCaldo</string>
    <string name="conexion_fallida">No se encontro este plato en la base de datos</string>
    <string name="ingreidientes">Ingredientes</string>
    <string name="preparacion">Preparación</string>
    <string name="compartir_picture">Compartir imagen</string>
    <string name="working_that">Estamos trabajando en ello :D</string>
    <string name="share_on_facebook">Compartir Facebook</string>
    <string name="facebook_app_id" translatable="false">472492076284805</string>
    <string name="share_on_twitter">Compartir Twitter</string>
    <string name="agregado_favorito">Te ha gustado esta receta! :D</string>
    <string name="bebidas_activity">Bebidas Típicas</string>
    <string name="bebidas">Bebidas típicas</string>
    <string name="title_activity_cafe_main">CafeMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="origin_coffe_nav_name">Origen del cafe</string>
    <string name="cultivo_coffe">Consumo y cultivo</string>
    <string name="recolection_coffe">Recolección</string>
    <string name="tueste_coffe">Tueste</string>
    <string name="coffe_in_world">Café en el mundo</string>
    <string name="coffe_mezcla">Mezcla</string>
    <string name="kinds_of_coffe">Tipos de café</string>
    <string name="datos_curiosos_coffe">Datos curiosos</string>
    <string name="coffe_health">Café y la salud</string>
    <string name="coffe_in_guate">Café en Guatemala</string>
    <string name="dev_coment">Por un buen café</string>
    <string name="coffe_main">El café es una leyenda, conocida por
    musulmanes y cristianos. A nivel religioso habla de que en una
    ocasión hubo un profeta que estaba enfermo, el ángel Gabriel les
    devolvia la salud y la fuerza viril, ofreciéndoles una bebida negra
    como la gran piedra Negra que hay en la Meca."\n\n"

    Como esta leyenda corren otras muchas que subrayan la importancia
    que se le ha atribuido al café a lo largo de la historia humana."\n\n"

    Lo que parece cierto es que el café se empezó a consumir en las
    altiplaniecies de Abisinia, donde crecía en forma silvestre su
    modalidad llamada Arábica."\n\n"

    De Etiopía pasó a a Arabia y a la India, probablemente a través
    de peregrinos musumlamnes que viajaban a La Meca, ya que las rutas de
    peregrinación fueron al mismo tiempo, durante siglos, grandes rutas
    comerciales."\n\n"

    Pero los grandes propagadores del café fueron los holandeses, que
    explotaron grandes plantaciones del mismo en sus colonias de Ceilán
    e Indonesia."\n\n"

    Ellos fueron los importadores del cafeto y quienes lo calimatarón en
    los jardines botánicos de Amsterdam, París y Londres, desde donde
    pasó a la Guyana holandesa, al Brasil, a Centroamérica y a otros
    muchos países. Gracias a lo cual en tres siglos esta infusión ha
    pasado de ser casi desconocido a convertirse en una bebida universal
    que Bach, Balzac,, Beethoven, Goldoni, Napoléon, rossini, Voltaire
    y otros muchos personajes de la historia han consumido en grandes
    cantidad y elogiado desmesuradamente."\n\n"</string>
    <string name="origin_coffe_text">Las plantas de café son originarias de
    la antigua etiopia en la república de Yemen."\n\n"

    Es fácil confundirse con el origen verdadero del café, ya que antiguas leyendas
    sobre el cultivo y las costumbre de  tomar café provienen de Arabia."\n\n"

    Uno de los más antiguos escritos que hace referencias al café es llamado
    "The Success of Coffe"(El éxito del café), escirto por un sensible hombre
    originario de Mecca llamado Abu-Bek a principios del S.XV y traducido al
    Francés en 1699 por Antoine de Gailland, el mismo que tradujo "Thousand and One Arabian Nights"(Las mil y una noches)."\n\n"

    La más fuerte y aceptada de las leyendas acerca del descubriimiento del café
    y de la bebida del café es la que hace referencia a un pastor llamado Kaldi.
    La leyenda dice que Kaldi se dió cuenta del extraño comportamiento de
    sus cabras estaban saltando alrededor muy excitadas y llenas de energía.
    El arbusto del que Kaldi pensó que sus cabras habían comido las frutas,
    tenían como frutas parecidas a las cerezas. Entonces Kaldi decidió probar
    las hojas del arbusto y un rato despúes se sintió lleno de energía."\n\n"

    Kaldi después llevó algunos frutos y ramas de ese arbusto a un monasterio.
    Allí le contó al Abad la historia de las cabras y de como se había sentido
    después de haber comodio las hojas. El Abad decidió cocinar las ramas
    y las cerezas; el resultado fue una bebida muy amarga que él tiró de
    inmediato al fuego. Cuando las cerezas cayeron en las brazas empezaron a hervir,
    las arvejas verdes que tenían en su interior produjeron un delicioso aroma
    que hicieron que el Aband pensar en hacer una bebida basada en el
    café tostado, y es así como la bebida del café nace."\n\n"</string>
    <string name="consumo_cultivo_text">Los Arabes fueron los primeros en
    descubrir las virtudes y las posibilidades económicas del café. Esto
    fue porque desarrollaron todo el proceso de cultivo y procesamiento
    del café y lo guardaron como un secreto. Los Arabes también trataron
    de evitar la extradición de cualquier semilla de café."\n\n"

    El café comenzó a conquistar territorio en el mundo como la bebida
    favorita en Europa y llegó a Italia en 1645 cortesía de el comerciante
    Veneciano Pietro Della Valle. Inglaterra comenzó a tomar café en
    1650 gracias a el comerciante Daniel Edwards, quien fue el primero
    que abrió un establecimiento de venta de café en Inglaterra y en Europa."\n\n"

    Otro autor, H.J.E. Jacob, afirma que el café como bebida en Europa
    comienza en Vienna con la invasión por parte de Turkish bajo
    el comando de Kara-Mustafa. Jacob además da crédito a un héroe de la
    época, Josef Koltschitzky, por abrir el primer "Cafe" en Septiembre
    12 de 1683 en el centro de la ciudad de Vienna."\n\n"

    El café llegó a Francia a través de el Puerto de Marcella. En 1660
    algunos comerciantes de ese puerto quienes sabían del café, sus
    atributos y efectos por sus viajes alrededor del mundo, decidieron
    llevar unos cuantos sacos desde Egipto y por 1661 la primera
    tienda de café fue abierta en Marcella."\n\n"

    La historia señala a Soliman Aga, el embajador de Persia en Paris
    durante el reinado de Luis XIV, como el primero en introducir el café
    en la Monarquía y la alta sociedad Francesa."\n\n"

    La primer tienda de café en Paris fue abierta al público en 1672
    por Pascal Armeniano a lo largo de la tradicional avenida
    Saint German. Un Siciliano de nombre Procopio abrió una tienda
    similar cerca, donde se reunían alrededor del exquisito sabor
    del café, muchos de los mejores ejemplares de la sociedad Parisina.
    En 1689 Procopio traladó su tienda de café a un lugar cerca al Teatro
    de la Comedia Francés dodne prosperó y finalmente finalizó cuando ya
    era conocido en todo Paris."\n\n"</string>
    <string name="tipocafe_title">Tipos de café</string>
    <string name="elcafe">ElCafe</string>
    <string name="back_to_elcaldo">Regresar a ElCaldo</string>
    <string name="recetas_semana_drawer">Recetas de la semana</string>
</resources>