<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_otras_comidas"
            android:icon="@drawable/otrascomidas"
            android:title="@string/otras_comidas" />
        <item
            android:id="@+id/nav_bebidas_tipicas"
            android:icon="@drawable/glass"
            android:title="@string/bebidas" />
        <item
            android:id="@+id/nav_preferencias"
            android:icon="@drawable/preferencias"
            android:title="@string/prefs" />
        <item
            android:id="@+id/nav_comousar"
            android:icon="@drawable/comousar"
            android:title="@string/como_usar" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/website"
                android:title="@string/web_site" />
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/twitterpng"
                android:title="@string/twitter" />
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/facebookpng"
                android:title="@string/facebook" />
            <item
                android:id="@+id/nav_recetassemana"
                android:icon="@drawable/terminoscopy"
                android:title="@string/recetas_semana_drawer" />
            <item
                android:id="@+id/nav_cafe"
                android:icon="@drawable/glass"
                android:title="@string/elcafe" />
            <item
                android:id="@+id/nav_creditos"
                android:icon="@drawable/creditos"
                android:title="@string/creditos_drawer" />
        </menu>
    </item>

</menu>
