<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/preferencias"
        android:orderInCategory="100"
        android:title="@string/preferencias"
        app:showAsAction="never" />


    <item
        android:id="@+id/creditos"
        android:orderInCategory="100"
        android:title="@string/creditos"
        app:showAsAction="never" />


    <item
        android:id="@+id/salir"
        android:orderInCategory="100"
        android:title="@string/salir"
        app:showAsAction="never" />

    <item
        android:id="@+id/btnCamara"
        android:icon="@drawable/camara"
        android:orderInCategory="100"
        android:title="Buscar"
        app:showAsAction="always"></item>
</menu>
